# mynet

./: .gitignore  Cargo.toml  README.md  data_viewer.py
images/: Figure_1.csv  Figure_2.csv  Figure_3.csv  Figure_4.csv
src/: esc_data.rs  main.rs  mnist_data.rs  network.rs  network_manager.rs
