[package]
name = "mynet"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.16.0", features = ["blas", "serde"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
rayon = "1.11"
num_cpus = "1.17"
rand = "0.9.2"
rand_distr = "0.5"
bincode = "1.3"
hound = "3.5"

